--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ thiserror = "1"
 prometheus = "0.13"
 anyhow = "1"
 dotenvy = "0.15"
+tonic = "0.11"
+prost = "0.12"
+
+[build-dependencies]
+tonic-build = "0.11"
